2008-10-10 Jim Garlick <garlick@llnl.gov>

	* etc/cyclades-pm42.dev : New.

	* test/cyclades.c, test/t46* : Test for above.

2008-09-15 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.2.1

	* powerman.spec : Handle case when %chaos and %rhel are both defined.

2008-08-27 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.2

2008-08-21 Jim Garlick <garlick@llnl.gov>

	* test/baytech.c, test/t21*, test/t22* : Also test rpc3-de model.

2008-08-18 Jim Garlick <garlick@llnl.gov>

	* etc/ipmipower.c, test/t47 : Add ipmipower test [Al Chu].
	
	* etc/ipmipower.dev : Use \n to terminate commands instead of \r.

	* etc/hp3488.dev, etc/ics8064.dev, etc/powerman.dev,
	etc/ipmipower.dev : Define only 'ranged' version of scripts.

	* src/device.c : Use ranged version of scripts instead of singlet 
	versions if defined.  Allow only the ranged script to be defined.

	* src/device.c, src/powermand.c, src/powerman.c, test/t?? : Add 
	-Y,--short-circuit-delay option to expedite testing.

	* etc/icebox.dev, etc/icebox3.dev : Drop status_soft_all scripts.

	* tests/* : Drop soft power status related tests.

	* src/powerman.c, src/client_proto.h, src/client.c, src/parse_tab.y,
	src/parse_lex.l : Drop --soft and --soft-all queries and status_soft,
	status_soft_all scripts.

2008-07-27 Jim Garlick <garlick@llnl.gov>

	* etc/cyclades-pm10.dev, etc/cyclades-pm8.dev : Simplified.

	* test/cyclades.c, test/t46 : Add cyclades tests.

2008-07-26 Jim Garlick <garlick@llnl.gov>

	* test/phantom.c, t45 : Add phantom tests.

	* etc/phantom.dev : Make it work for v3 and v4.

	* etc/phantom4.dev : Removed.

	* config/ac_curses.m4 : Added curses config check, needed by phantom.

2008-07-05 Jim Garlick <garlick@llnl.gov>

	* src/xread.c : Add xreadline().

2008-07-03 Jim Garlick <garlick@llnl.gov>

	* etc/ilom.dev, test/ilom.c, test/t44 : Added reset support.

2008-07-02 Jim Garlick <garlick@llnl.gov>

	* etc/ilom-inline.dev : Removed.

	* etc/ilom.dev : Added, new and improved.
