@@ -802,7 +802,8 @@ static void _create_client_socket(void)
     Client *c;
     struct sockaddr_in addr;
     socklen_t addr_size = sizeof(struct sockaddr_in);
-    struct hostent *hent;
+    struct addrinfo *addrinfo;
+    int n;
     char buf[64];
 
     /* create client data structure */
@@ -841,11 +842,11 @@ static void _create_client_socket(void)
     c->port = ntohs(addr.sin_port);
 
     /* get c->host */
-    if ((hent = gethostbyaddr((const char *) &addr.sin_addr,
-                              sizeof(struct in_addr), AF_INET)) == NULL) {
-        err(FALSE, "_create_client: gethostbyaddr failed");
+    if ((n = getaddrinfo(c->ip, NULL, NULL, &addrinfo)) != 0) {
+        err(FALSE, "_create_client: getaddrinfo %s: %s", 
+            c->ip, gai_strerror(n));
     } else {
-        c->host = xstrdup(hent->h_name);
+        c->host = xstrdup(addrinfo->ai_canonname);
     }
 #if HAVE_TCP_WRAPPERS
     /* get authorization from tcp wrappers */
